TfNSW/OpenText/Azure/VM/SMDO-PPD/eotppdotcsa-nsg.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "location": {
            "type": "string"
        },
        "virtualMachineName": {
            "type": "string"
        },
        "virtualMachineSize": {
            "type": "string"
        },
        "adminUsername": {
            "type": "string"
        },
        "virtualNetworkNameResourceGroup": {
            "type": "string"
        },
        "virtualNetworkName": {
            "type": "string"
        },
        "networkInterfaceName": {
            "type": "string"
        },
        "networkSecurityGroupName": {
            "type": "string"
        },
        "adminPassword": {
            "type": "securestring"
        },
        "diagnosticsStorageAccountName": {
            "type": "string"
        },
        "diagnosticsStorageAccountId": {
            "type": "string"
        },
        "diagnosticsStorageAccountType": {
            "type": "string"
        },
        "subnetName": {
            "type": "string"
        },
        "imageReferenceId": {
            "type": "string"
        },
        "modulesUrl": {
            "type": "string",
            "metadata": {
                "description": "URL for the DSC configuration module. NOTE: Can be a Github url(raw) to the zip file"
            }
        },
        "configurationFunction": {
            "type": "string",
            "defaultValue": "ContosoWebsite.ps1\\ContosoWebsite",
            "metadata": {
                "description": "DSC configuration function to call"
            }
        }
    },
    "variables": {
        "vnetId": "[resourceId(parameters('virtualNetworkNameResourceGroup'),'Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]",
        "subnetRef": "[concat(variables('vnetId'), '/subnets/', parameters('subnetName'))]"
    },
    "resources": [
        {
            "apiVersion": "2017-09-01",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroupName')]",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    {
                        "properties": {
                            "description": "string",
                            "protocol": "Tcp",
                            "sourceAddressPrefixes": [
                                "10.217.140.0/22"
                            ],
                            "destinationAddressPrefix": "*",
                            "sourcePortRanges": [
                                "80",
                                "443"
                            ],
                            "destinationPortRanges": [
                                "80",
                                "443"
                            ],
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound"
                        },
                        "name": "HTTP"
                    },
                    {
                        "properties": {
                            "description": "string",
                            "protocol": "Tcp",
                            "sourceAddressPrefixes": [
                                "10.217.140.0/22"
                            ],
                            "destinationAddressPrefix": "*",
                            "sourcePortRanges": [
                                "2099",
                                "8500-8515"
                            ],
                            "destinationPortRanges": [
                                "2099",
                                "8500-8515"
                            ],
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Inbound"
                        },
                        "name": "Application"
                    },
                    {
                        "properties": {
                            "description": "string",
                            "protocol": "Tcp",
                            "sourceAddressPrefixes": [
                                "10.217.140.0/22"
                            ],
                            "destinationAddressPrefix": "*",
                            "sourcePortRanges": [
                                "5858"
                            ],
                            "destinationPortRanges": [
                                "5858"
                            ],
                            "access": "Allow",
                            "priority": 130,
                            "direction": "Inbound"
                        },
                        "name": "Application_2"
                    }
                ]
            }
        }
    ],
    "outputs": {
        "adminUsername": {
            "type": "string",
            "value": "[parameters('adminUsername')]"
        }
    }
}
